ff & missing pages & SingApp sidebar empty link fixes

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -109,6 +109,13 @@
   }
 }
 
+/* ff icons valign fix */
+@-moz-document url-prefix() {
+  .page-controls .navbar-nav > li > a > .rounded-lg > i{
+    vertical-align: -8%;
+  }
+}
+
 .content-wrap{
   position: relative;
   z-index: 0;
